--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -1,1 +1,35 @@
-<p>cadastrar works!</p>
+ <div class="col-md-6 justify-content-center container">
+        <div class="col-md-9 align-self-center justify-content-center container">
+            <h2 class="text-center">Cadastre-se</h2>
+            <form >
+                <div class="form-group">
+                    <label for="nome">Nome</label>
+                    <input class="form-control" type="text" placeholder="Seu nome">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input class="form-control" type="email" placeholder="Seu e-mail">
+                </div>
+                <div class="form-group">
+                    <label for="senha">Senha</label>
+                    <input class="form-control" type="password" placeholder="Insira uma senha de no mínimo 8 caracteres">
+                </div>
+                <div class="form-group">
+                    <label for="ConfirmSenha">Confirme sua senha</label>
+                    <input class="form-control" type="password" placeholder="Confirme a senha">
+                </div>
+                <div class="form-group">
+                    <label for="">Tipo de Usuário</label>
+                    <select name="" id="" class="form-control">
+                        <option selected disable>Selecione sua opção</option>
+                        <option value="normal">Padrão</option>
+                        <option value="adm">Administrador</option>
+                    </select>
+                </div>
+                <div class="d-flex justify-content-around">
+                    <button routerLink="/entrar" class="btn btn-outline-danger w-25" routerLink="/login">Cancelar</button>
+                    <button class="btn btn-success w-25">Cadastrar</button>
+                </div>
+            </form>
+        </div>
+    </div>
