--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,5 @@
-<div class="col-md-8">
+<div class="col-md-4 container align-items-center justify-content-center column card card-body">
+<div class="col-md-10">
     <h2 class="text-center mb-3">Entrar</h2>
     <form class="">
       <div class="form-group">
@@ -19,10 +20,15 @@
       </div>
     </form>
     <div class="d-flex justify-content-center">
-      <button type="submit" class="btn btn-primary col-7">Entrar</button>
+      <button type="submit" class="btn btn-primary col-12 rounded-pill">Entrar</button>
     </div>
-    <hr class="my-4" />
-    <div class="d-flex justify-content-center h5">
+    <div class="row d-flex align-items-center p-0 my-6">
+      <hr class="col-4">
+      <span class="">OU</span>
+    <hr class="col-4"> 
+  </div>
+    <div class="d-flex justify-content-center h6">
       <p>Não tem uma conta?<a routerLink="/cadastrar" class="ml-1">Cadastre-se</a></p>
     </div>
   </div>
+</div>
