Configurando login component

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
     <div class="d-flex justify-content-center align-items-center flex-row centro">
       <div class="container col-md-5">
         <div class="align-items-center justify-content-center card card-body shadow p-3 mb-5">
-          <div class="col-md-9 justify-content-center m-b">
+          <div class="col-md-9 justify-content-center mt-2">
             <h1 class="text-center">RedeTec</h1>
             <h6 class="text-center">Faça parte da comunidade que te ajuda a crescer!</h6>
             <div class="form-group">
