--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -4,31 +4,31 @@
             <form >
                 <div class="form-group">
                     <label for="nome">Nome</label>
-                    <input class="form-control" type="text" placeholder="Seu nome">
+                    <input [(ngModel)]='usuario.nome' name="nome" class="form-control" type="text" placeholder="Seu nome">
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input class="form-control" type="email" placeholder="Seu e-mail">
+                    <input [(ngModel)]='usuario.usuario' name="email" class="form-control" type="email" placeholder="Seu e-mail">
                 </div>
                 <div class="form-group">
                     <label for="senha">Senha</label>
-                    <input class="form-control" type="password" placeholder="Insira uma senha de no mínimo 8 caracteres">
+                    <input (input)="confirmSenha($event)" name="senha" class="form-control" type="password" placeholder="Insira uma senha de no mínimo 8 caracteres">
                 </div>
                 <div class="form-group">
                     <label for="ConfirmSenha">Confirme sua senha</label>
-                    <input class="form-control" type="password" placeholder="Confirme a senha">
+                    <input [(ngModel)]='usuario.senha' name="ConfirmSenha" class="form-control" type="password" placeholder="Confirme a senha">
                 </div>
                 <div class="form-group">
                     <label for="">Tipo de Usuário</label>
-                    <select name="" id="" class="form-control">
+                    <select name="tipo" id="" (change)="tipoUser($event)" class="form-control">
                         <option selected disable>Selecione sua opção</option>
                         <option value="normal">Padrão</option>
                         <option value="adm">Administrador</option>
                     </select>
                 </div>
                 <div class="d-flex justify-content-around">
-                    <button routerLink="/entrar" class="btn btn-outline-danger w-25" routerLink="/login">Cancelar</button>
-                    <button class="btn btn-success w-25">Cadastrar</button>
+                    <button routerLink="/login" class="btn btn-outline-danger w-25" routerLink="/login">Cancelar</button>
+                    <button class="btn btn-success w-25" (click)="cadastrar()">Cadastrar</button>
                 </div>
             </form>
         </div>
