--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,7 +7,7 @@
             <h6 class="text-center">Faça parte da comunidade que te ajuda a crescer!</h6>
             <div class="form-group">
               <label for="usuario">E-mail</label>
-              <input
+              <input [(ngModel)]='usuarioLogin.usuario'
                 class="form-control bg-roxo text-pink"
                 type="email"
                 placeholder="Seu e-mail"
@@ -15,14 +15,14 @@
             </div>
             <div class="form-group">
               <label for="senha">Senha</label>
-              <input
+              <input [(ngModel)]='usuarioLogin.senha'
                 class="form-control bg-roxo text-pink"
                 type="password"
                 placeholder="Sua senha"
               />
             </div>
             <div class="d-flex justify-content-center mb-4 m-b">
-              <button type="submit" class="btn btn-pink col-10 rounded">
+              <button type="submit" class="btn btn-pink col-10 rounded" (click)="entrar()">
                 Entrar
               </button>
             </div>
