--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="form-group">
                     <label for="ConfirmSenha">Confirme sua senha</label>
-                    <input [(ngModel)]='usuario.senha' name="ConfirmSenha" class="form-control" type="password" placeholder="Confirme a senha">
+                    <input [(ngModel)]='usuario.senha' name="confirmSenha" class="form-control" type="password" placeholder="Confirme a senha">
                 </div>
                 <div class="form-group">
                     <label for="">Tipo de Usuário</label>
