--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,16 +1,16 @@
-/* .img-bg{
-    background-image: url('https://i.imgur.com/DfrAtYV.png');
+.img-bg{
+    background-image: url('https://i.imgur.com/OG75puf.png');
     width: 100vw;
     height: 100vh;
     background-size: cover;
-} */
+}
 
 .m-b{
     margin-top: 1.65rem;
 }
 
 .btn-pink{
-    background-color: rgb(241, 100, 206);
+    background-color: rgba(231, 87, 195, 0.8);
     color: white;
 }
 .btn-pink:hover{
