estilização do feed

--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,1 +1,39 @@
-<p>rodape works!</p>
+<footer class="page-footer font-small pt-4" id="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 d-flex justify-content-center">
+        <h4 class="text-white">Siga-nos nas redes sociais</h4>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12 d-flex justify-content-center">
+
+      <ul class="social-network">
+        <li>
+          <a href="https://www.linkedin.com/in/lisandra-dias/" target="_blank" class="iconLinkedin"></a>
+          <i class="fa fa-linkedin" aria-hidden="true"></i>
+        </li>
+
+        <li>
+          <a href="https://www.instagram.com/lisscodes/" target="_blank" class="iconInstagram"></a>
+          <i class="fa fa-instagram" aria-hidden="true"></i>
+        </li>
+
+        <li>
+          <a href="https://github.com/lisscodes" target="_blank" class="iconGithub"></a>
+          <i class="fa fa-github" aria-hidden="true"></i>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="footer-copyright text-center py-3" id="footerbase">
+    <span class="text-light"> </span>
+    <a class="text-light" target="_blank" href="https://github.com/lisscodes">RedeTec</a>
+  </div>
+
+</footer>
+
+
