--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<!-- <app-login></app-login> -->
+<app-menu></app-menu>
+
 <router-outlet></router-outlet>
-<!-- <app-cadastrar></app-cadastrar> -->
+
+<app-rodape></app-rodape>
