--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,1 +1,84 @@
-<p>feed works!</p>
+<div class="container-fluid d-flex flex-column">
+  <div class="row justify-content-between mt-3 mb-5">
+    <div class="col-md-4 d-flex flex-column">
+      <h5 class="text-secondary">Seja bem vindo(a)!</h5>
+      <div class="row d-flex">
+        <div class="col-md-12">
+
+          <div class="form-group">
+            <label for="titulo">Título</label>
+            <input type="text" class="form-control" id="titulo" placeholder="Digite o título">
+          </div>
+
+          <div class="form-group">
+            <label for="texto">Texto</label>
+            <textarea class="form-control" name="" id="" rows="3"></textarea>
+          </div>
+
+          <div class="form-group">
+            <label for="texto">Escolha seu tema ou <a data-dismiss="modal" routerLink="/tema">cadastre um novo</a>:
+            </label>
+            <select name="tema" id="tema" class="form-control">
+              <option value=""></option>
+            </select>
+          </div>
+          <button class="btn btn-secondary mr-2">Nova Postagem</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-">
+
+      <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+          <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
+            aria-selected="true">Todas as Postagens</a>
+        </li>
+        <li class="nav-item" role="presentation">
+          <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
+            aria-controls="profile" aria-selected="false">Minhas Postagens</a>
+        </li>
+        <li class="nav-item" role="presentation">
+          <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab"
+            aria-controls="contact" aria-selected="false">Postagens por Tema</a>
+        </li>
+      </ul>
+      <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+          <div class="card text-center">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has a regular title and short paragraphy of text below it.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div></div>
+        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+          <div class="card text-center">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This card has a regular title and short paragraphy of text below it.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+          <div class="card text-center">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This card has a regular title and short paragraphy of text below it.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+      <div class="container d-flex justify-content-end mb-5 mt-3">
+        <div class="row d-flex align-items-center mb-5">
+
+        </div>
+      </div>
+
+</div>
