get e post de tema

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+.fs-18{
+    font-size: 18pt;
+}
+.fs-50{
+    font-size: 50pt;
+}
