--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -7,22 +7,22 @@
 
           <div class="form-group">
             <label for="titulo">Título</label>
-            <input type="text" class="form-control" id="titulo" placeholder="Digite o título">
+            <input [(ngModel)]="postagem.titulo" type="text" class="form-control" id="titulo" placeholder="Digite o título">
           </div>
 
           <div class="form-group">
             <label for="texto">Texto</label>
-            <textarea class="form-control" name="" id="" rows="3"></textarea>
+            <textarea [(ngModel)]="postagem.texto" class="form-control" name="" id="" rows="3"></textarea>
           </div>
 
           <div class="form-group">
             <label for="texto">Escolha seu tema ou <a data-dismiss="modal" routerLink="/tema">cadastre um novo</a>:
             </label>
-            <select name="tema" id="tema" class="form-control">
-              <option value=""></option>
+            <select name="tema" id="tema" class="form-control" [(ngModel)]="idTema" (change)="findByIdTema()">
+              <option *ngFor="let i of listaTemas" value="{{i.id}}">{{i.tema}}</option>
             </select>
           </div>
-          <button class="btn btn-secondary mr-2">Nova Postagem</button>
+          <button class="btn btn-secondary mr-2" (click)="publicar()">Nova Postagem</button>
         </div>
       </div>
     </div>
@@ -35,7 +35,7 @@
             aria-selected="true">Todas as Postagens</a>
         </li>
         <li class="nav-item" role="presentation">
-          <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
+          <a (click)="findByIdUsuario()" class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
             aria-controls="profile" aria-selected="false">Minhas Postagens</a>
         </li>
         <li class="nav-item" role="presentation">
@@ -43,30 +43,35 @@
             aria-controls="contact" aria-selected="false">Postagens por Tema</a>
         </li>
       </ul>
-      <div class="tab-content" id="myTabContent">
+      <div class="tab-content mt-4" id="myTabContent">
         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-          <div class="card text-center">
+          <div class="card text-center" *ngFor="let item of listaPostagens">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has a regular title and short paragraphy of text below it.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title m-0">{{item.titulo}}</h5>
+            <small class="text-muted">Tema: {{item.categoria.tema}}</small>
+            <p class="card-text mt-3">{{item.texto}}</p>
+            <p class="card-text"><small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</small></p>
+            <p class="card-text"><small class="text-muted"> by: {{item.usuario.nome}}</small></p>
           </div>
-        </div></div>
+        </div>
+      </div>
         <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
           <div class="card text-center">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This card has a regular title and short paragraphy of text below it.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <div class="card-body" *ngFor="let item of usuario.postagem">
+              <h5 class="card-title m-0">{{item.titulo}}</h5>
+              <small class="text-muted">Tema: {{item.categoria.tema}}</small>
+              <p class="card-text mt-3">{{item.texto}}</p>
+              <p class="card-text"><small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</small></p>
             </div>
           </div>
         </div>
-        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-          <div class="card text-center">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This card has a regular title and short paragraphy of text below it.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab" >
+          <div class="card text-center" *ngFor="let tema of listaTemas">
+            <div class="card-body" *ngFor="let item of tema.postagem">
+              <h5 class="card-title m-0">{{item.titulo}}</h5>
+              <p class="card-text mt-3">{{item.texto}}</p>
+              <p class="card-text"><small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</small></p>
+              <p class="card-text"><small class="text-muted"> by: {{item.usuario.nome}}</small></p>
             </div>
           </div>
         </div>
