get e post de postagem

--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -62,6 +62,9 @@
               <small class="text-muted">Tema: {{item.categoria.tema}}</small>
               <p class="card-text mt-3">{{item.texto}}</p>
               <p class="card-text"><small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</small></p>
+              <a class="text-info mr-3" href="">Editar</a>
+              <a class="text-danger" href="">Apagar</a>
+
             </div>
           </div>
         </div>
