--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,12 +21,15 @@
                 placeholder="Sua senha"
               />
             </div>
-            <div class="d-flex justify-content-center mb-4 m-b">
-              <button type="submit" class="btn btn-pink col-10 rounded" (click)="entrar()">
+
+            <div class="d-flex justify-content-center mb-4 mt-5">
+              <button type="submit" class="col-6 rounded" id="bt-entrar" (click)="entrar()">
                 Entrar
               </button>
+
             </div>
           </div>
+
           <div class="d-flex justify-content-center h6">
             <p>
               Novo no RedeTec?<a routerLink="/cadastrar" class="ml-1 "
