--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -10,13 +10,7 @@ ul.social-network li {
 }
 
 #footer {
-  background-color: #d0acd0;
-  overflow-x: hidden;
-  width: 100vw;
-}
-
-#footerbase {
-  background-color: #74539c;
+  background-color:#a8bdbe;
   overflow-x: hidden;
   width: 100vw;
 }
