--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light p-4" id="navbar">
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto d-flex align-items-center">
+    <ul class="navbar-nav w-100 d-flex align-items-center justify-content-center">
       <li class="nav-item active">
         <img src="/assets/rede_tec-logo-removebg.png" alt="logo redetec" class="img-fluid rounded-circle" id="cabecalho-img">
       </li>
