Criando e iniciando configurações do perfil

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,7 +23,7 @@
             </div>
 
             <div class="d-flex justify-content-center mb-4 mt-5">
-              <button type="submit" class="col-6 rounded" id="bt-entrar" (click)="entrar()">
+              <button type="submit" class="col-md-10 rounded btn btn-primary" id="bt-entrar" (click)="entrar()">
                 Entrar
               </button>
 
