--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -2,7 +2,7 @@
   <div class="row justify-content-between">
 
     <!-------------------------------primeira col------------------------------------>
-    <div class="col-md-2 d-flex flex-column bg-light sticky-top">
+    <div class="col-md-2 d-flex flex-column bg-light">
       <div class="row d-flex ">
         <div class="col-md-12 ">
 
