--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -1,12 +1,13 @@
 <div class="container mt-4">
     <div class="row align-items-center">
         <div class="col-md-2 d-flex align-items-start justify-content-start">
-            <img src="https://i.imgur.com/mAYrN0e.png" alt="Foto de usuario" width="130px" height="130px" class="img-fluid rounded-circle">
+            <img src="{{foto}}" alt="Foto de usuario" width="130px" height="130px" class="img-fluid rounded-circle">
         </div>
         <div class="mr-auto">
         <div class="col-md-12">
             <div class="col-md-12">
-                <p class="h1">{{nome}}</p>
+                <p class="h1">{{nome}} <a [routerLink]="['/user-edit', id]"><i class="fa fa-pencil h4 text-dark" aria-hidden="true"></i>
+                </a></p>
             </div>
         </div>
             <div class="col-md-12">
@@ -25,18 +26,16 @@
             <div class="card-body my-3" *ngFor="let item of usuario.postagem">
                 <div class="row align-items-center mb-3">
                     <div class="col-md-2 d-flex align-items-start justify-content-start">
-                        <img src="https://i.imgur.com/mAYrN0e.png" alt="Foto de usuario" width="50px" height="50px" class="img-fluid rounded-circle">
+                        <img src="{{foto}}" alt="Foto de usuario" width="50px" height="50px" class="img-fluid rounded-circle">
                     </div>
-                    <div class="row align-items-center mr-auto">
-                        <div class="col-md-6">
-                            <div class="f-size">
-                                <span>{{nome}}</span>
+                    <div class="row mr-auto d-flex align-items-start justify-content-start">
+                        <div class="col-md-12">
+                            <div class="d-flex justify-content-center">
+                                <span class="f-size d-flex justify-content-center">{{nome}}</span>
                             </div>
                         </div>
-                            <div class="col-md-7">
-                                <div class="col-md-12">
-                                <span class="tcinza f-size-12 align-self-start">Administrador</span>
-                                </div>
+                            <div class="col-md-12">
+                                <span class="tcinza f-size-12 align-self-start col-md-12">Administrador</span>
                         </div>
                     </div>
 
