--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,7 +6,10 @@
         <img src="/assets/rede_tec-logo-removebg.png" alt="logo redetec" class="img-fluid rounded-circle" id="cabecalho-img">
       </li>
       <li class="nav-item pl-3" id="cabecalho-item">
-        <p class="m-0 font-weight-bold text-white fs-16 mr-4">RedeTec</p>
+        <a routerLink="/feed" class="text-white text-left fs-18">
+          <p class="m-0 font-weight-bold text-white fs-16 mr-4">RedeTec</p>
+      </a>
+       
       </li>
 
       <li class="nav-item pl-3" id="cabecalho-item">
