--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,34 +1,40 @@
 <footer class="page-footer font-small pt-4" id="footer">
+
   <div class="container">
+    
     <div class="row">
       <div class="col-md-12 d-flex justify-content-center">
         <h4 class="text-white">Siga-nos nas redes sociais</h4>
       </div>
     </div>
-  </div>
 
   <div class="row">
     <div class="col-md-12 d-flex justify-content-center">
 
       <ul class="social-network">
+
         <li>
-          <a href="https://www.linkedin.com/in/lisandra-dias/" target="_blank" class="iconLinkedin"></a>
+          <a href="https://www.linkedin.com/in/lisandra-dias/" target="_blank" class="iconLinkedin">
           <i class="fa fa-linkedin" aria-hidden="true"></i>
+        </a>
         </li>
 
         <li>
-          <a href="https://www.instagram.com/lisscodes/" target="_blank" class="iconInstagram"></a>
+          <a href="https://www.instagram.com/lisscodes/" target="_blank" class="iconInstagram">
           <i class="fa fa-instagram" aria-hidden="true"></i>
+        </a>
         </li>
 
         <li>
-          <a href="https://github.com/lisscodes" target="_blank" class="iconGithub"></a>
+          <a href="https://github.com/lisscodes" target="_blank" class="iconGithub">
           <i class="fa fa-github" aria-hidden="true"></i>
+        </a>
         </li>
       </ul>
+
     </div>
   </div>
-
+</div>
 
 </footer>
 
