--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -22,8 +22,10 @@
                     <label for="">Tipo de Usuário</label>
                     <select name="tipo" id="" (change)="tipoUser($event)" class="form-control">
                         <option selected disable>Selecione sua opção</option>
-                        <option value="normal">Padrão</option>
-                        <option value="adm">Administrador</option>
+                        <option value="Padrão">Padrão</option>
+                        <option value="Empresa">Empresa</option>
+                        <option value="Mentor">Mentor</option>
+                        <option value="Administrador">Administrador</option>
                     </select>
                 </div>
                 <div class="d-flex justify-content-around">
