--- a/src/app/edit/user-edit/user-edit.component.html
+++ b/src/app/edit/user-edit/user-edit.component.html
@@ -29,12 +29,14 @@
                     <label for="">Tipo de Usuário</label>
                     <select name="tipo" id="" (change)="tipoUser($event)" class="form-control">
                         <option selected disable>Selecione sua opção</option>
-                        <option value="normal">Padrão</option>
-                        <option value="adm">Administrador</option>
+                        <option value="Padrão">Padrão</option>
+                        <option value="Empresa">Empresa</option>
+                        <option value="Mentor">Mentor</option>
+                        <option value="Administrador">Administrador</option>
                     </select>
                 </div>
                 <div class="d-flex justify-content-around">
-                    <button routerLink="/login" class="btn btn-outline-danger w-25" routerLink="/inicio">Cancelar</button>
+                    <button routerLink="/login" class="btn btn-outline-danger w-25" routerLink="/perfil">Cancelar</button>
                     <button class="btn btn-success w-25" (click)="atualizar()">Atualizar</button>
                 </div>
             </form>
