--- a/src/app/feed/feed.component.css
+++ b/src/app/feed/feed.component.css
@@ -14,3 +14,68 @@
   position: sticky;
   top: 10px;
 }
+
+
+body {
+  height: 50vh;
+  background-color: #111;
+  color: white;   
+  font-family: Arial, Helvetica, sans-serif;       
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+button {
+  height: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 8px;
+  padding: 8px;
+  font-size: 1.1rem;
+  color: #000;
+  cursor: pointer;
+  transition: all .25s ease-in-out;
+}
+.label {
+  display: flex;
+  align-items: center;
+  margin-right: 8px;
+}
+.label svg {
+  margin-right: 4px;
+}
+.label path {
+  fill: #8a8d9b;   
+  transition: all .25s ease-in-out;       
+}
+.number {
+  color: #000000;
+}
+button:hover path{
+  fill: #FF0000;
+}
+button.like .number {
+  color: #FF0000
+}
+button.like svg {
+  animation: transitionLike 1s ease-in;
+}
+button.like path {
+  fill: #FF0000;
+}
+
+@keyframes transitionLike {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+
+
