--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -51,21 +51,31 @@
         </li>
       </ul>
 
-      <div class="row">
-        <img src="{{foto}}" alt="Foto de perfil do usuário" width="50px" height="50px" class="img-fluid rounded-circle">
-      </div>
-
       <!--Ng For - Cards da postagem-->
       <div class="tab-content mt-5" id="nav-tabContent">
         <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens-tab">
           <div class="card text-center my-3" *ngFor="let item of listaPostagens">
           <div class="card-body ">
+            <div class="row align-items-center mb-3">
+              <div class="col-md-2 d-flex align-items-start justify-content-start">
+                  <img src="{{foto}}" alt="Foto de usuario" class="img-fluid rounded-circle">
+              </div>
+              <div class="row mr-auto d-flex align-items-start justify-content-start">
+                  <div class="col-md-12">
+                      
+                          <span class="f-size d-flex justify-content-start">{{nome}}</span> 
+                      
+                  </div>
+                  <span class="tcinza f-size-12 d-flex justify-content-start col-md-12">{{usuario.tipo}}</span>
+              </div>
+
+          </div>
             <h5 class="card-title m-0">{{item.titulo}}</h5>
             <small class="text-muted">Tema: {{item.categoria.tema}}</small>
             <p class="card-text mt-3">{{item.texto}}</p>
             <img src="{{item.foto}}" alt="" class="img-fluid">
             <p class="card-text"><small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</small></p>
-            <p class="card-text"><small class="text-muted"> by: {{item.usuario.nome}}</small></p>
+            
             <button id="like">
               <div class="label">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -80,17 +90,6 @@
         </div>
 
       </div>
-
-        <div class="tab-pane fade" id="postagensTema" role="tabpanel" aria-labelledby="nav-postagensTema-tab" >
-          <div class="card text-center" *ngFor="let tema of listaTemas">
-            <div class="card-body" *ngFor="let item of tema.postagem">
-              <h5 class="card-title m-0">{{item.titulo}}</h5>
-              <p class="card-text mt-3">{{item.texto}}</p>
-              <p class="card-text"><small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</small></p>
-              <p class="card-text"><small class="text-muted"> by: {{item.usuario.nome}}</small></p>
-            </div>
-          </div>
-        </div>
       </div>
 
     </div>
