--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -3,7 +3,7 @@
 
     <!-------------------------------primeira col------------------------------------>
     <div class="col-md-2 d-flex flex-column bg-light sticky-top" id="firstcol">
-      <div class="row d-flex ">
+      <div class="row sticky-top ">
         <div class="col-md-12 ">
 
           <div class="form-group mt-3">
@@ -76,14 +76,14 @@
             <img src="{{item.foto}}" alt="" class="img-fluid">
             <p class="card-text"><small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</small></p>
             
-            <button id="like">
+            <button id="like" (click)="this.item.curtida = this.item.curtida + 1">
               <div class="label">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M8.4 5.25C5.61914 5.25 3.25 7.3293 3.25 10.0298C3.25 11.8927 4.12235 13.4612 5.27849 14.7604C6.43066 16.0552 7.91714 17.142 9.26097 18.0516L11.5796 19.6211C11.8335 19.793 12.1665 19.793 12.4204 19.6211L14.739 18.0516C16.0829 17.142 17.5693 16.0552 18.7215 14.7604C19.8777 13.4612 20.75 11.8927 20.75 10.0298C20.75 7.3293 18.3809 5.25 15.6 5.25C14.1665 5.25 12.9052 5.92214 12 6.79183C11.0948 5.92214 9.83347 5.25 8.4 5.25Z" fill="black"/>
                 </svg>
               
               </div>
-              <div class="number" id="number">50</div>
+              <div class="number" id="number">{{item.curtida || 0}}</div>
             </button>
             
           </div>
@@ -96,7 +96,7 @@
 
     <!-------------------------------terceira col------------------------------------>
     <div class="col-md-3 bg-light" id="thirdcol">
-      <div class="row">
+      <div class="row sticky-top">
         <img class="img-fluid" src="/assets/menino_programador_1-removebg-preview.png">
       </div>
     </div>
