--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -16,27 +16,21 @@ ul.social-network li {
 }
 
 .fa {
-  font-size: 35pt;
+  font-size: 15pt;
   color: white;
-  padding: 10px;
+  padding: 5px;
 }
 
 .fa-linkedin:hover {
-  color: #0072b1;
-}
-
-.fa-instagram:hover {
-  background: radial-gradient(circle farthest-corner at 35% 90%, #fec564, transparent 50%), radial-gradient(circle farthest-corner at 0 140%, #fec564, transparent 50%), radial-gradient(ellipse farthest-corner at 0 -25%, #5258cf, transparent 50%), radial-gradient(ellipse farthest-corner at 20% -50%, #5258cf, transparent 50%), radial-gradient(ellipse farthest-corner at 100% 0, #893dc2, transparent 50%), radial-gradient(ellipse farthest-corner at 60% -20%, #893dc2, transparent 50%), radial-gradient(ellipse farthest-corner at 100% 100%, #d9317a, transparent), linear-gradient(#6559ca, #bc318f 30%, #e33f5f 50%, #f77638 70%, #fec66d 100%);
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: #e3e8eb;
 
 }
 
 .fa-github:hover {
-  color: #24292f;
+  color: #e8ebee;
 }
 
 .fa-copyright {
-  font-size: 14pt;
+  font-size: 10pt;
 }
+
