--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -3,31 +3,38 @@
   <div class="container">
     
     <div class="row">
-      <div class="col-md-12 d-flex justify-content-center">
-        <h4 class="text-white">Siga-nos nas redes sociais</h4>
+      <div class="col-md-12 d-flex justify-content-center" >
+        <h4 class="text-white">Contatos:</h4>
       </div>
     </div>
 
   <div class="row">
     <div class="col-md-12 d-flex justify-content-center">
 
-      <ul class="social-network">
+      <ul class="social-network d-flex">
 
         <li>
-          <a href="https://www.linkedin.com/in/lisandra-dias/" target="_blank" class="iconLinkedin">
-          <i class="fa fa-linkedin" aria-hidden="true"></i>
+          <a target="_blank" class="iconEmail">
+          <i class="fa fa-envelope-o" aria-hidden="true"></i>
+          <h6 class="text-white">redetecpe@gmail.com</h6>
         </a>
         </li>
 
         <li>
-          <a href="https://www.instagram.com/lisscodes/" target="_blank" class="iconInstagram">
-          <i class="fa fa-instagram" aria-hidden="true"></i>
-        </a>
+          <a target="_blank" class="iconInstagram">
+          <i class="fa fa-phone" aria-hidden="true"></i>
+          <h6 class="text-white">+55 (xx) xxxxx-xxxx</h6>
+         </a>
         </li>
 
         <li>
-          <a href="https://github.com/lisscodes" target="_blank" class="iconGithub">
-          <i class="fa fa-github" aria-hidden="true"></i>
+          <a target="_blank" class="iconGithub">
+          <i class="fa fa-map-marker" aria-hidden="true"></i>
+          <h6 class="text-white"> 
+             <P>Rua: Av Bernardo Vieira</P>
+             <P>de Melo, 123, Candeiras,</P>
+             <P>Jaboatão dos Guararapes -PE</P> 
+          </h6>
         </a>
         </li>
       </ul>
