--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -61,22 +61,18 @@
         <div class="d-flex justify-content-around mr-3">
           <div class="card-body my-3">
             <div class="row align-items-center mb-3">
-              <div class="col-md-2 d-flex align-items-start justify-content-start mb-3">
-                  <img src="{{foto}}" alt="Foto de usuario" class="img-fluid rounded-circle">
+              <div class="col-md-2 d-flex align-items-start justify-content-start">
+                  <img src="{{item.usuario.foto}}" alt="Foto de usuario" width="50px" height="50px" class="img-fluid rounded-circle">
               </div>
               <div class="row mr-auto d-flex align-items-start justify-content-start">
-                  
-                    <div class="d-flex justify-content-center mr-5">
-                          <span class="f-size d-flex justify-content-start">{{nome}}</span> 
-                         <span class="tcinza f-size-12 d-flex justify-content-start col-md-12">{{usuario.tipo}}</span>
-                  </div>
-                  
-              
                   <div class="col-md-12">
-                    <span class="tcinza f-size-12 align-self-start col-md-12">Administrador</span>
-            </div>
+                      
+                          <span class="f-size d-flex justify-content-start">{{item.usuario.nome}}</span>
+                      
+                  </div>
+                      
+                          <span class="tcinza f-size-12 d-flex justify-content-start col-md-12">{{item.usuario.tipo}}</span>
                   
-                
               </div>
 
           </div>
