--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -13,10 +13,10 @@
 </div>
 </div>
 
-<div class="container-fluid d-flex flex-column mt-5">
-    <div class="row justify-content-between">
+<div class="container d-flex justify-content-center mt-5">
+    <div class="row d-flex justify-content-center">
     <div class="tab-content mt-5">
-        <div class="card text-center col-6 my-4 d-flex flex-column" *ngFor="let item of usuario.postagem">
+        <div class="card text-center col-6 my-4 d-flex justify-content-center" *ngFor="let item of usuario.postagem">
             <div class="card-body"> 
                 <div class="row align-items-center mb-3">
                     <div class="col-md-2 d-flex align-items-start justify-content-start">
