--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -40,16 +40,16 @@
     <div class="col-md-6">
 
       <ul class="nav nav-tabs" id="myTab" role="tablist">
-        <li class="nav-item" role="presentation">
-          <a class="nav-link active text-secondary font-weight-bold" id="nav-todasPostagens-tab" data-toggle="tab" href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens"
-            aria-selected="true">Todas as Postagens</a>
-        </li>
-        
-        <li class="nav-item" role="presentation">
-          <a class="nav-link text-secondary font-weight-bold" id="nav-postagensTema-tab" data-toggle="tab" href="#postagensTema" role="tab"
-            aria-controls="nav-postagensTema" aria-selected="false">Postagens por Tema</a>
-        </li>
-      </ul>
+      <div class="d-flex" role="group">
+          <button type="" id="btnGroupDrop1" class="btn-config p-2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <img src="https://i.imgur.com/rYVlhwK.png" alt="Três pontinhos" width="20px" height="20px">
+          </button>
+          <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+          <a class="dropdown-item d-flex justify-content-center" [routerLink]="['/postagem-edit']">Todas as Postagens</a>
+          <a class="dropdown-item d-flex justify-content-center" [routerLink]="['/postagem-delete']">Postagens por Tema</a>
+          </div>
+      </div>
+    </ul>
 
       <!--Ng For - Cards da postagem-->
       
