--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -45,8 +45,8 @@
           <img src="https://i.imgur.com/rYVlhwK.png" alt="Três pontinhos" width="20px" height="20px">
           </button>
           <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-          <a class="dropdown-item d-flex justify-content-center" [routerLink]="['/postagem-edit']">Todas as Postagens</a>
-          <a class="dropdown-item d-flex justify-content-center" [routerLink]="['/postagem-delete']">Postagens por Tema</a>
+          <a class="dropdown-item d-flex justify-content-center" href="#postagemTema">Todas as Postagens</a>
+          <a class="dropdown-item d-flex justify-content-center" href="postagemTema">Postagens por Tema</a>
           </div>
       </div>
     </ul>
@@ -55,7 +55,7 @@
       
 
       <div class="tab-content mt-5" id="nav-tabContent">
-        <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens-tab">
+        <div class="tab-pane fade show active" id="postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
           <div class="card text-center my-3" *ngFor="let item of listaPostagens">
             <div class="container mr-3">
         <div class="d-flex justify-content-around mr-3">
@@ -76,7 +76,7 @@
               </div>
 
           </div>
-            <h5 class="card-title m-0">{{item.titulo}}</h5>
+            <h5 class="card-title m-0">by: {{item.titulo}}</h5>
             <small class="text-muted">Tema: {{item.categoria.tema}}</small>
             <p class="card-text mt-3">{{item.texto}}</p>
             <img src="{{item.foto}}" alt="" class="img-fluid">
@@ -98,7 +98,49 @@
       </div>
       </div>
     </div>
+    <div class="tab-pane fade show active" id="postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
+      <div class="card text-center my-3" *ngFor="let item of listaPostagens">
+        <div class="container mr-3">
+    <div class="d-flex justify-content-around mr-3">
+      <div class="card-body my-3">
+        <div class="row align-items-center mb-3">
+          <div class="col-md-2 d-flex align-items-start justify-content-start">
+              <img src="{{item.usuario.foto}}" alt="Foto de usuario" width="50px" height="50px" class="img-fluid rounded-circle">
+          </div>
+          <div class="row mr-auto d-flex align-items-start justify-content-start">
+              <div class="col-md-12">
+                  
+                      <span class="f-size d-flex justify-content-start">{{item.usuario.nome}}</span>
+                  
+              </div>
+                  
+                      <span class="tcinza f-size-12 d-flex justify-content-start col-md-12">{{item.usuario.tipo}}</span>
+              
+          </div>
 
+      </div>
+        <h5 class="card-title m-0">{{item.titulo}}</h5>
+        <small class="text-muted">Tema: {{item.categoria.tema}}</small>
+        <p class="card-text mt-3">{{item.texto}}</p>
+        <img src="{{item.foto}}" alt="" class="img-fluid">
+        <p class="card-text"><small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</small></p>
+        
+        <button id="like" (click)="this.item.curtida = this.item.curtida + 1">
+          <div class="label">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M8.4 5.25C5.61914 5.25 3.25 7.3293 3.25 10.0298C3.25 11.8927 4.12235 13.4612 5.27849 14.7604C6.43066 16.0552 7.91714 17.142 9.26097 18.0516L11.5796 19.6211C11.8335 19.793 12.1665 19.793 12.4204 19.6211L14.739 18.0516C16.0829 17.142 17.5693 16.0552 18.7215 14.7604C19.8777 13.4612 20.75 11.8927 20.75 10.0298C20.75 7.3293 18.3809 5.25 15.6 5.25C14.1665 5.25 12.9052 5.92214 12 6.79183C11.0948 5.92214 9.83347 5.25 8.4 5.25Z" fill="black"/>
+            </svg>
+          
+          </div>
+          <div class="number" id="number">{{item.curtida || 0}}</div>
+        </button>
+        
+      </div>
+    </div>
+
+  </div>
+  </div>
+</div>
   </div>
 
     </div>
