--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -3,53 +3,96 @@
 
     <!-------------------------------primeira col------------------------------------>
     <div class="col-md-2 d-flex flex-column bg-light sticky-top" id="firstcol">
-      <div class="row sticky-top ">
-        <div class="col-md-12 ">
-
-          <div class="form-group mt-3">
-            <label for="titulo">Título</label>
-            <input [(ngModel)]="postagem.titulo" type="text" class="form-control" id="titulo" placeholder="Digite o título">
-          </div>
-
-          <div class="form-group">
-            <label for="foto">Foto</label>
-            <input [(ngModel)]="postagem.foto" type="text" class="form-control" id="foto" placeholder="Insira uma foto">
-          </div>
-
-          <div class="form-group">
-            <label for="texto">Texto</label>
-            <textarea [(ngModel)]="postagem.texto" class="form-control" name="" id="" rows="3"></textarea>
-          </div>
-
-          <div class="form-group">
-            <label for="texto">Escolha seu tema ou <a data-dismiss="modal" routerLink="/categoria">cadastre um novo</a>:
-            </label>
-            <select name="tema" id="tema" class="form-control" [(ngModel)]="idTema" (change)="findByIdTema()">
-              <option *ngFor="let i of listaTemas" value="{{i.id}}">{{i.tema}}</option>
-            </select>
-          </div>
-          <div class="align-items-center justify-content-center">
-            <button class="btn btn-secondary mr-2 mb-3 pl-5 pr-5" (click)="publicar()">Postar</button>
-          </div>
-        </div>
-      </div>
+      
     </div>
 
     <!-------------------------------segunda col------------------------------------>
 
     <div class="col-md-6">
 
-      <ul class="nav nav-tabs" id="myTab" role="tablist">
-      <div class="d-flex" role="group">
-          <button type="" id="btnGroupDrop1" class="btn-config p-2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <img src="https://i.imgur.com/rYVlhwK.png" alt="Três pontinhos" width="20px" height="20px">
-          </button>
-          <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-          <a class="dropdown-item d-flex justify-content-center" [routerLink]="['/postagem-edit']">Todas as Postagens</a>
-          <a class="dropdown-item d-flex justify-content-center" [routerLink]="['/postagem-delete']">Postagens por Tema</a>
-          </div>
+      <div class="container">
+      <div class="row d-flex align-items-center">
+          <div class="container col-md-12 ml-0 mr-auto p-0 row d-flex align-items-center">
+            <div class="card mt-4 mb-2 d-flex justify-content-start col-md-10 mr-auto card-config">
+                <div class="card-body"> 
+                    <div class="row mb-3">
+                        <div class="col-md-2 d-flex align-items-start justify-content-start">
+                            <img src="{{foto}}" alt="Foto de usuario" width="50px" height="50px" class="img-fluid rounded-circle">
+                        </div>
+                        <div class="row mr-auto d-flex align-items-start justify-content-start">
+                            <div class="col-md-12">
+                                
+                                    <!-- <span class="f-size d-flex justify-content-start">{{nome}}</span> -->
+                                
+                            </div>
+                            
+                            <button class="btn ml-3 btn-modal" type="button"  data-toggle="modal" data-target="#exampleModal"><i class="fa fa-plus" aria-hidden="true"></i> Nova Postagem</button>
+
+          <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Nova Postagem</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                      <div class="form-group">
+                        <label for="titulo">Título</label>
+                        <input [(ngModel)]="postagem.titulo" type="text" class="form-control" id="titulo" placeholder="Digite o título">
+                      </div>
+            
+                      <div class="form-group">
+                        <label for="foto">Foto</label>
+                        <input [(ngModel)]="postagem.foto" type="text" class="form-control" id="foto" placeholder="Insira uma foto">
+                      </div>
+            
+                      <div class="form-group">
+                        <label for="texto">Texto</label>
+                        <textarea [(ngModel)]="postagem.texto" class="form-control" name="" id="" rows="3"></textarea>
+                      </div>
+            
+                      <div class="form-group">
+                        <label for="texto">Escolha seu tema ou <a data-dismiss="modal" routerLink="/categoria">cadastre um novo</a>:
+                        </label>
+                        <select name="tema" id="tema" class="form-control" [(ngModel)]="idTema" (change)="findByIdTema()">
+                          <option *ngFor="let i of listaTemas" value="{{i.id}}">{{i.tema}}</option>
+                        </select>
+                      </div>
+                      <div class="align-items-center justify-content-center">
+                        <button class="btn btn-success d-flex ml-auto pl-5 pr-5" data-dismiss="modal" (click)="publicar()">Postar</button>
+                      </div>
+              </div>
+            
+
+                </div>
+            </div>
+        </div>
       </div>
-    </ul>
+      </div>
+      
+
+
+      
+    
+</div>
+</div>
+<ul class="nav nav-tabs" id="myTab" role="tablist">
+  <div class="d-flex" role="group">
+      <button type="" id="btnGroupDrop1" class="btn-config p-2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <img src="https://i.imgur.com/rYVlhwK.png" alt="Três pontinhos" width="20px" height="20px">
+      </button>
+      <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+      <a class="dropdown-item d-flex justify-content-center" [routerLink]="['/postagem-edit']">Todas as Postagens</a>
+      <a class="dropdown-item d-flex justify-content-center" [routerLink]="['/postagem-delete']">Postagens por Tema</a>
+      </div>
+  </div>
+</ul>
+</div>
+
+
 
       <!--Ng For - Cards da postagem-->
       
@@ -101,7 +144,10 @@
 
   </div>
 
-    </div>
+    
+  </div>
+</div>
+</div>
 
     <!-------------------------------terceira col------------------------------------>
     <div class="col-md-3 bg-light" id="thirdcol">
